2007-11-13  Johan Dahlin  <johan@gnome.org>

	* po/it.po: Add italian translation, fixes #3582 
	(Sandro Bonazzola)

=== 1.9.19 ===
2007-11-06 Fabio Morbec <fabio@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py
	* kiwi.spec
	Release 1.9.19

2007-11-04  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/entry.py: catch NameError instead of AttributeError,
	fixes gnome bug #479510 (Richard Hult)

2007-10-31  Mauricio Vieira  <mauricio.vieira@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* AUTHORS (Maintainers): Add Mauricio

	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/scale.py:
	* tests/test_Scale.py:
	* tests/test_proxy.py:
	* tests/test_utils.py:
	Add support for Proxy scale widget, fixes #3578

2007-10-04  Fabio Morbec  <fabio@async.com.br>

	reviewed by: Christian Reis  <kiko@async.com.br>

	* kiwi/ui/objectlist.py (SummaryLabel.update_total): An error occur
	in SummaryLabel when update_total try to sum Decimal with None.
	Fixes #3557

2007-09-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py (_EasyComboBoxHelper.get_selected): Return 
	None instead of raising AssertionError when nothing has been 
	inserted yet.

=== 1.9.18 ===
2007-09-11 Fabio Morbec <fabio@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py
	* kiwi.spec
	Release 1.9.18

=== 1.9.17 ===
2007-07-31 Fabio Morbec  <fabio@async.com.br>

	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* kiwi/__version__.py:
	Release 1.9.17

2007-08-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py:
	* gazpacho-plugin/kiwiwidgets.xml: Add gazpacho support for scale 
	widgets too.

	* kiwi/ui/widgets/scale.py: Add HScale/VScale, based on patch by
	Mauricio B. C. Vieira.

2007-08-26  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column, ObjectList): Remove the cache
	property.
	(ObjectList): Refactor column and renderer handling to the
	Column
