@@ -1,3 +1,14 @@
+2007-11-13  Ali Afshar <aafshar@gmail.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/db/stormintegration.py: 
+	Add support for Storm in our DB API,
+
+	* examples/search_storm.py: add an example
+
+	Fixes for #3408
+
 2007-11-13  Johan Dahlin  <johan@gnome.org>
 
 	* po/it.po: Add italian translation, fixes #3582 
